--- a/Project/Xeromatic/Views/Home/Index.cshtml
+++ b/Project/Xeromatic/Views/Home/Index.cshtml
@@ -2,9 +2,7 @@
 
 @{
     ViewBag.Title = "Title";
-    Layout = "_Layout.cshtml";
+    Layout = "../Shared/_Layout.cshtml";
 }
-
-<h1>Welcome to the Xeromatic!</h1>
 
 <div id="app"></div>
