--- a/Project/Xeromatic/Views/Shared/_Layout.cshtml
+++ b/Project/Xeromatic/Views/Shared/_Layout.cshtml
@@ -4,12 +4,10 @@
     <head>
         <meta name="viewport" content="width=device-width" />
         <title>@ViewBag.Title</title>
-        <link rel="stylesheet" href="https://edge.xero.com/style/xui/9.5.0/xui.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </head>
     <body>
-        <div>
-            @RenderBody()
-        </div>
+        @RenderBody()
         <script src="https://fb.me/react-0.14.6.js"></script>
         <script src="https://fb.me/react-dom-0.14.6.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
